<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PrincipalActivity"
    android:id="@+id/linerLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_menu"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:onClick="entrarQuizPrincipal"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/iconoquiz" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/iconoeditarperfil" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/iconodesarrolladores" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/iconosalir" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="10dp"
        android:layout_marginTop="55dp"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            //Mamiferos

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="118dp"
                android:background="@drawable/bordes_2"
                android:onClick="entrarMamiferos"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgMamiferos"
                    android:layout_width="205dp"
                    android:layout_height="125dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/leon"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="38dp"
                    android:layout_weight="5"
                    android:text="@string/mamiferos"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            //Aves

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bordes_2"
                android:onClick="entrarAves"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgAves"
                    android:layout_width="205dp"
                    android:layout_height="125dp"
                    android:layout_marginLeft="18dp"
                    android:layout_weight="1"
                    android:background="@drawable/aves" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:text="@string/aves"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            //Anfibios

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bordes_2"
                android:gravity="right"
                android:onClick="entrarAnfibios"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgAnfibios"
                    android:layout_width="205dp"
                    android:layout_height="125dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/anfibios"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/tvAnfibios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:gravity="right"
                    android:text="@string/anfibios"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            //Reptiles

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bordes_2"
                android:onClick="entrarReptiles"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgReptiles"
                    android:layout_width="205dp"
                    android:layout_height="125dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/reptiles"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:text="@string/reptiles"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            //Peces

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bordes_2"
                android:onClick="entrarPeces"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgPeces"
                    android:layout_width="205dp"
                    android:layout_height="125dp"
                    android:layout_marginLeft="18dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/peces"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:text="@string/peces"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>